--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,5 +1,32 @@
-<h1>Movies#index</h1>
+</br></br></br>
+<h1>😇❤️😻Movie database️😻❤😇</h1></br>
+<p></p>
+ <% @movies.each do |movie| %>
 
-<% @movies.each do |movie| %>
     <p><%= movie.title %>, réalisé par <%= movie.director %>, sorti en <%= movie.release_year %></p>
 <% end %>
+
+
+<hr/>
+</br>
+</br>
+ <a href="https://imgbb.com/"><img src="https://image.ibb.co/g3yhEH/The_hacking_project_1_300x115.png" alt="The_hacking_project_1_300x115" border="0"></a>
+</br>
+ <h4>  Projet du 30 Avril 2018 - SEMAINE 5 JOUR 1 </h4>
+
+
+
+
+
+   <p></br>
+##- Audrey (@audreycouture)</br>
+##- Jerome (@Jerome)</br>
+##- Damien (@damien13005)</br>
+##- Maxime (@Maxime)</br>
+##- Sam     (@sam)</p></br>
+<h5>TEAM WEST COAST</h5></br>
+<p><a href="https://ibb.co/iALJoc"><img src="https://preview.ibb.co/kyNngx/img_marseille_3.png" alt="img_marseille_3" border="0"></a></br>
+
+
+<p>------------     Merci pour la correction !    ------------</p>
+
