--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -3,7 +3,8 @@
 <p></p>
  <% @movies.each do |movie| %>
 
-    <p><%= movie.title %>, réalisé par <%= movie.director %>, sorti en <%= movie.release_year %></p>
+    <p><%= movie.title %>, réalisé par <%= movie.director.first_name %><%= movie.director.last_name %>
+, sorti en <%= movie.release_year %></p>
 <% end %>
 
 
